# notizen

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  conanfile.txt
src/: CMakeLists.txt  actions.cc  actions.h  backend.cc  backend.cpp  backend.h  backend.hpp  filemodel.cpp  filemodel.hpp  fmt.hpp  fwd.h  main.cc  main.cpp  note.cc  note.h  notebook.cc  notebook.h  resources.qrc
src/contents/ui/: NoteView.qml  Notes.qml  Page.qml  SideBar.qml  main.qml
src/contents/ui/components/: Note.qml  NoteCard.qml
src/contents/ui/sidebar/: FooterBar.qml  HeaderBar.qml  Notebooks.qml  Notes.qml  Tag.qml  Tags.qml
src/qml/: CMakeLists.txt  DefaultPage.qml  FileDelegate.qml  HeaderBar.qml  HomePage.qml  Main.qml  MainToolBar.qml  NoteCard.qml  NoteView.qml  Notebook.qml  SideBar.qml  TabBar.qml
