qt_add_executable(${PROJECT_NAME})

target_sources(${PROJECT_NAME}
PRIVATE
  main.cpp
  backend.hpp
  backend.cpp
  filemodel.hpp
  filemodel.cpp
)

qt_add_qml_module(${PROJECT_NAME}
URI Notizen
VERSION 1.0
)

add_subdirectory(qml)

target_link_libraries(${PROJECT_NAME}
PRIVATE
  Qt6::Core
  Qt6::Quick
  Qt6::Gui
  Qt6::QuickControls2
  fmt::fmt
  libassert::assert
)

install(TARGETS ${PROJECT_NAME})
